Replace DTO records with classes for broader Java support