@@ -8,6 +8,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/merchants")
@@ -30,6 +31,6 @@ public class MerchantController {
                         merchant.getLocation(),
                         merchant.getSignatureStory()
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
